# Scientific-programming-tasks

./: README.md  task_01.py
Last-task/: 25-12-2025_Rshtuni_Vlad_Last_Task.ipynb  25-12-2025_Рштуни_В.Д._Last_Task.pptx
Task_01 c++/: CMakeLists.txt  main.cpp
